# gv3

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pinact.yaml  .pre-commit-config.yaml  .prettierignore  .textlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  gv3.keys.default.toml  gv3.keys.toml.default  gv3.toml.default  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  rust-toolchain.toml  ぐらびゅ.default.toml  ぐらびゅ.keys.default.toml
.claude/: settings.json
.claude/agents/: unsafe-reviewer.md
.claude/rules/: coding-standards.md  windows-batch-generation.md
.githooks/: pre-push
.github/: dependabot.yaml
.github/scripts/: pyfltr-annotate.py
.github/workflows/: ci.yaml  ci.yml  docs.yaml  release.yaml  release.yml
docs/: agent-learned.md  architecture.md  concept.md  customization.md  development.md  editing.md  features.md  file-operations.md  formats.md  getting-started.md  index.md  keybindings.md  navigation.md  user-guide.md  viewing.md
docs/.vitepress/: config.ts
docs/development/: architecture.md  concept.md  development.md  index.md
docs/guide/: customization.md  editing.md  file-operations.md  formats.md  getting-started.md  index.md  navigation.md  viewing.md
docs/public/: version.json
src/: app.rs  bookmark.rs  config.rs  document.rs  file_info.rs  file_list.rs  file_ops.rs  main.rs  pdf_renderer.rs  persistent_filter.rs  temp_cleanup.rs  test_helpers.rs  updater.rs  util.rs
src/app/: file_ops.rs  mod.rs  panel.rs  slideshow.rs  system.rs
src/archive/: mod.rs  rar.rs  sevenz.rs  susie.rs  zip.rs
src/bookmark/: legacy.rs
src/document/: container.rs  mod.rs  types.rs  utils.rs
src/file_list/: groups.rs  mod.rs  natural_sort.rs  natural_sort_explorer.rs  navigation.rs  sort.rs
src/filter/: blur.rs  brightness.rs  color.rs  mod.rs  sharpen.rs  transform.rs
src/image/: exif_reader.rs  mod.rs  standard.rs  susie.rs
src/prefetch/: coordinator.rs  loader_thread.rs  mod.rs  page_cache.rs
src/render/: d2d_renderer.rs  layout.rs  mod.rs
src/shell/: association.rs  context_menu.rs  mod.rs  sendto.rs
src/susie/: plugin.rs
src/ui/: cursor_hider.rs  dialog.rs  file_list_panel.rs  filter_dialog.rs  font.rs  info_dialog.rs  key_config.rs  menu.rs  mod.rs  page_dialog.rs  resize_dialog.rs  rotate_dialog.rs
