[package]
name = "gv3"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
    "Win32_Globalization",
    "Win32_System_Registry",
] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
crossbeam-channel = "0.5"
natord = "1.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
unrar = "0.5"
sevenz-rust = { version = "0.6", features = ["bzip2", "zstd", "aes256"] }
libloading = "0.8"
