[package]
name = "gv"
version = "1.5.9"
edition = "2024"
rust-version = "1.95"
description = "Windows用の軽量画像ビューアー"
license = "MIT"
repository = "https://github.com/ak110/gv"

[[bin]]
name = "ぐらびゅ"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
    "Win32_Globalization",
    "Win32_System_Registry",
    "Win32_UI_Shell_Common",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Storage",
    "Storage_Streams",
    "Data_Pdf",
    "Foundation",
] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
png = "0.18"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
anyhow = "1"
thiserror = "2"
crossbeam-channel = "0.5"
natord = "1.0"
zip = { version = "8", default-features = false, features = ["deflate"] }
unrar = "0.5"
sevenz-rust2 = { version = "0.21", features = ["bzip2", "zstd", "aes256"] }
libloading = "0.9"
ureq = "3"
serde_json = "1"
rayon = "1"
strum = { version = "0.28", features = ["derive"] }
fast_image_resize = { version = "6", features = ["rayon"] }
memmap2 = "0.9"
kamadak-exif = "0.6"
getrandom = "0.4"

[build-dependencies]
winresource = "0.1.31"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Rust 1.95 系の clippy で `collapsible_match` が if-else 以外の単純な if にも誤検知する。
# (例: `WM_SETCURSOR => { if app.on_set_cursor() { ... } }` を guard に潰す提案)
# 対象はガード化で意味が変わらないものも多いが、上流の false-positive 修正を待つため
# この lint は許可する。Rust 1.95 系を採用している間は外せない。
collapsible_match = "allow"
# Rust 1.95 系の clippy が `loop { let Some(x) = expr else break; ... }` を
# `while let Some(x) = expr` に書き換えるよう提案するが、ループ本体で expr 由来の
# フィールドを &mut self で書き換えるパターンでは while-let の借用が長く生き残り
# 単純な書き換えができない。document.rs `process_expand_results` がまさに該当する
# ため、この lint は許可する。Rust 1.95 系を採用している間は外せない。
while_let_loop = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
unreadable_literal = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
